add controller components for game and player in lunarmooner example

--- a/Example/CMakeLists.txt
+++ b/Example/CMakeLists.txt
@@ -55,7 +55,9 @@ SET(EXAMPLE_SRC
   src/Game.cpp
   src/CaveDemoDrawable.cpp
   src/LMAlienController.cpp
+  src/LMGameController.cpp
   src/LMMothershipController.cpp
+  src/LMPlayerController.cpp
   src/LunarMoonerState.cpp
   src/main.cpp
   src/MenuMainState.cpp
