--- a/Example/Example.vcxproj.filters
+++ b/Example/Example.vcxproj.filters
@@ -108,6 +108,12 @@
     <ClInclude Include="include\LMMothershipController.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\LMGameController.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\LMPlayerController.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Game.cpp">
@@ -174,6 +180,12 @@
       <Filter>Source Files\lunar mooner</Filter>
     </ClCompile>
     <ClCompile Include="src\LMMothershipController.cpp">
+      <Filter>Source Files\lunar mooner</Filter>
+    </ClCompile>
+    <ClCompile Include="src\LMGameController.cpp">
+      <Filter>Source Files\lunar mooner</Filter>
+    </ClCompile>
+    <ClCompile Include="src\LMPlayerController.cpp">
       <Filter>Source Files\lunar mooner</Filter>
     </ClCompile>
   </ItemGroup>
