--- a/Example/Example.vcxproj
+++ b/Example/Example.vcxproj
@@ -76,7 +76,9 @@
     <ClInclude Include="include\CommandIds.hpp" />
     <ClInclude Include="include\Game.hpp" />
     <ClInclude Include="include\LMAlienController.hpp" />
+    <ClInclude Include="include\LMGameController.hpp" />
     <ClInclude Include="include\LMMothershipController.hpp" />
+    <ClInclude Include="include\LMPlayerController.hpp" />
     <ClInclude Include="include\LunarMoonerState.hpp" />
     <ClInclude Include="include\MenuMainState.hpp" />
     <ClInclude Include="include\MenuOptionState.hpp" />
@@ -103,7 +105,9 @@
     <ClCompile Include="src\CaveDemoDrawable.cpp" />
     <ClCompile Include="src\Game.cpp" />
     <ClCompile Include="src\LMAlienController.cpp" />
+    <ClCompile Include="src\LMGameController.cpp" />
     <ClCompile Include="src\LMMothershipController.cpp" />
+    <ClCompile Include="src\LMPlayerController.cpp" />
     <ClCompile Include="src\LunarMoonerState.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\MenuMainState.cpp" />
