--- a/Example/Example.vcxproj
+++ b/Example/Example.vcxproj
@@ -76,6 +76,8 @@
     <ClInclude Include="include\CommandIds.hpp" />
     <ClInclude Include="include\Game.hpp" />
     <ClInclude Include="include\LMAlienController.hpp" />
+    <ClInclude Include="include\LMCollisionComponent.hpp" />
+    <ClInclude Include="include\LMCollisionWorld.hpp" />
     <ClInclude Include="include\LMGameController.hpp" />
     <ClInclude Include="include\LMMothershipController.hpp" />
     <ClInclude Include="include\LMPlayerController.hpp" />
@@ -105,6 +107,8 @@
     <ClCompile Include="src\CaveDemoDrawable.cpp" />
     <ClCompile Include="src\Game.cpp" />
     <ClCompile Include="src\LMAlienController.cpp" />
+    <ClCompile Include="src\LMCollisionComponent.cpp" />
+    <ClCompile Include="src\LMCollisionWorld.cpp" />
     <ClCompile Include="src\LMGameController.cpp" />
     <ClCompile Include="src\LMMothershipController.cpp" />
     <ClCompile Include="src\LMPlayerController.cpp" />
