--- a/Example/Example.vcxproj
+++ b/Example/Example.vcxproj
@@ -76,6 +76,7 @@
     <ClInclude Include="include\CommandIds.hpp" />
     <ClInclude Include="include\Game.hpp" />
     <ClInclude Include="include\LMAlienController.hpp" />
+    <ClInclude Include="include\LMBulletController.hpp" />
     <ClInclude Include="include\LMCollisionComponent.hpp" />
     <ClInclude Include="include\LMCollisionWorld.hpp" />
     <ClInclude Include="include\LMGameController.hpp" />
@@ -108,6 +109,7 @@
     <ClCompile Include="src\CaveDemoDrawable.cpp" />
     <ClCompile Include="src\Game.cpp" />
     <ClCompile Include="src\LMAlienController.cpp" />
+    <ClCompile Include="src\LMBulletController.cpp" />
     <ClCompile Include="src\LMCollisionComponent.cpp" />
     <ClCompile Include="src\LMCollisionWorld.cpp" />
     <ClCompile Include="src\LMGameController.cpp" />
