--- a/Example/Example.vcxproj.filters
+++ b/Example/Example.vcxproj.filters
@@ -123,6 +123,9 @@
     <ClInclude Include="include\LMHumanController.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\LMBulletController.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Game.cpp">
@@ -204,6 +207,9 @@
       <Filter>Source Files\lunar mooner</Filter>
     </ClCompile>
     <ClCompile Include="src\LMHumanController.cpp">
+      <Filter>Source Files\lunar mooner</Filter>
+    </ClCompile>
+    <ClCompile Include="src\LMBulletController.cpp">
       <Filter>Source Files\lunar mooner</Filter>
     </ClCompile>
   </ItemGroup>
