--- a/Example/Example.vcxproj.filters
+++ b/Example/Example.vcxproj.filters
@@ -126,6 +126,9 @@
     <ClInclude Include="include\LMBulletController.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\LMSpeedMeter.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Game.cpp">
@@ -210,6 +213,9 @@
       <Filter>Source Files\lunar mooner</Filter>
     </ClCompile>
     <ClCompile Include="src\LMBulletController.cpp">
+      <Filter>Source Files\lunar mooner</Filter>
+    </ClCompile>
+    <ClCompile Include="src\LMSpeedMeter.cpp">
       <Filter>Source Files\lunar mooner</Filter>
     </ClCompile>
   </ItemGroup>
