add normal mapped lighting preview to sprite editor

--- a/SpriteEditor/SpriteEditor.csproj
+++ b/SpriteEditor/SpriteEditor.csproj
@@ -88,6 +88,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SfmlControl.cs" />
+    <Compile Include="Shaders.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <EmbeddedResource Include="MainWindow.resx">
       <DependentUpon>MainWindow.cs</DependentUpon>
     </EmbeddedResource>
