--- a/xygine/src/CMakeLists.txt
+++ b/xygine/src/CMakeLists.txt
@@ -12,6 +12,7 @@ set(XY_SRC
   ${XY_DIR}/ParticleAffectors.cpp
   ${XY_DIR}/PolyBatch.cpp
   ${XY_DIR}/PostBloom.cpp
+  ${XY_DIR}/PostBlur.cpp
   ${XY_DIR}/PostChromeAb.cpp
   ${XY_DIR}/PostProcess.cpp
   ${XY_DIR}/QuadTree.cpp
