--- a/SpriteEditor/SpriteEditor.csproj
+++ b/SpriteEditor/SpriteEditor.csproj
@@ -91,6 +91,12 @@
     <Compile Include="Shaders.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Stitcher.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Stitcher.Designer.cs">
+      <DependentUpon>Stitcher.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="MainWindow.resx">
       <DependentUpon>MainWindow.cs</DependentUpon>
     </EmbeddedResource>
@@ -103,6 +109,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Stitcher.resx">
+      <DependentUpon>Stitcher.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
