--- a/xygine/CMakeLists.txt
+++ b/xygine/CMakeLists.txt
@@ -91,6 +91,14 @@ if(UNIX)
     ${X11_LIBRARIES})
 endif()
 
+if(APPLE)
+  if(XY_STATIC_RUNTIME)
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++14 -static")
+  else()
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++14 -fPIC")
+  endif()
+endif()
+
 #install xygine
 install(DIRECTORY ${CMAKE_SOURCE_DIR}/include/xygine DESTINATION include)
 if(XY_STATIC_LIB)
