--- a/Example/Example.vcxproj.filters
+++ b/Example/Example.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClInclude Include="include\DeferredDemoState.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\RotationComponent.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Game.cpp">
