fix example cmake file under linux

--- a/Example/CMakeLists.txt
+++ b/Example/CMakeLists.txt
@@ -26,20 +26,22 @@ if(xygine_example_STATIC_SFML)
 endif()
 
 if(WIN32)
-  find_package(SFML 2 REQUIRED graphics window audio system network main)
+  find_package(SFML 2.3.2 REQUIRED graphics window audio system network main)
 else()
-  find_package(SFML 2 REQUIRED graphics window audio system network)
+  find_package(SFML 2.3.2 REQUIRED graphics window audio system network)
 endif()
 
 if(UNIX)
   find_package(X11 REQUIRED)
 endif()
 
-find_package(BOX2D REQUIRED)
+find_package(BOX2D 2.3.2 REQUIRED)
+find_package(OpenGL REQUIRED)
 
 include_directories(
   ${SFML_INCLUDE_DIR}
   ${BOX2D_INCLUDE_DIR}  
+  ${OPENGL_INCLUDE_DIRECTORIES}
   ${CMAKE_SOURCE_DIR}/include
   ${CMAKE_SOURCE_DIR}/../xygine/include)
 
@@ -54,6 +56,7 @@ include(${XY_DIR}/CMakeLists.txt)
 SET(EXAMPLE_SRC
   src/Game.cpp
   src/CaveDemoDrawable.cpp
+  src/DeferredDemoState.cpp
   src/main.cpp
   src/MenuMainState.cpp
   src/MenuOptionState.cpp
@@ -78,7 +81,8 @@ endif()
 target_link_libraries(xygine_example
   ${SFML_LIBRARIES}
   ${SFML_DEPENDENCIES}
-  ${BOX2D_LIBRARIES})
+  ${BOX2D_LIBRARIES}
+  ${OPENGL_LIBRARIES})
 
 if(UNIX)
   target_link_libraries(xygine_example
