add vertex attrib binding class

--- a/xygine/xygine.vcxproj
+++ b/xygine/xygine.vcxproj
@@ -164,6 +164,7 @@
     <ClCompile Include="src\mesh\Material.cpp" />
     <ClCompile Include="src\mesh\SubMesh.cpp" />
     <ClCompile Include="src\mesh\UniformBuffer.cpp" />
+    <ClCompile Include="src\mesh\VertexAttribBinding.cpp" />
     <ClCompile Include="src\mesh\VertexLayout.cpp" />
     <ClCompile Include="src\MultiRenderTexture.cpp" />
     <ClCompile Include="src\network\AckSystem.cpp" />
@@ -241,8 +242,10 @@
     <ClInclude Include="include\xygine\mesh\Material.hpp" />
     <ClInclude Include="include\xygine\mesh\Mesh.hpp" />
     <ClInclude Include="include\xygine\mesh\MeshRenderer.hpp" />
+    <ClInclude Include="include\xygine\mesh\StaticConsts.hpp" />
     <ClInclude Include="include\xygine\mesh\SubMesh.hpp" />
     <ClInclude Include="include\xygine\mesh\UniformBuffer.hpp" />
+    <ClInclude Include="include\xygine\mesh\VertexAttribBinding.hpp" />
     <ClInclude Include="include\xygine\mesh\VertexLayout.hpp" />
     <ClInclude Include="include\xygine\MultiRenderTexture.hpp" />
     <ClInclude Include="include\xygine\network\AckSystem.hpp" />
