add getter for uniform buffers to mesh renderer class add ctors for all property types to material property class add material resource class for material management

--- a/xygine/src/CMakeLists.txt
+++ b/xygine/src/CMakeLists.txt
@@ -39,6 +39,7 @@ set(XY_SRC
 
   ${XY_DIR}/mesh/Material.cpp
   ${XY_DIR}/mesh/MaterialProperty.cpp
+  ${XY_DIR}/mesh/MaterialResource.cpp
   ${XY_DIR}/mesh/Mesh.cpp
   ${XY_DIR}/mesh/MeshRenderer.cpp
   ${XY_DIR}/mesh/SubMesh.cpp
