--- a/xygine/xygine.vcxproj
+++ b/xygine/xygine.vcxproj
@@ -243,6 +243,7 @@
     <ClInclude Include="include\xygine\mesh\Material.hpp" />
     <ClInclude Include="include\xygine\mesh\MaterialResource.hpp" />
     <ClInclude Include="include\xygine\mesh\Mesh.hpp" />
+    <ClInclude Include="include\xygine\mesh\MeshBuilder.hpp" />
     <ClInclude Include="include\xygine\mesh\MeshRenderer.hpp" />
     <ClInclude Include="include\xygine\mesh\MeshResource.hpp" />
     <ClInclude Include="include\xygine\mesh\StaticConsts.hpp" />
