--- a/xygine/xygine.vcxproj.filters
+++ b/xygine/xygine.vcxproj.filters
@@ -698,5 +698,8 @@
     <ClInclude Include="include\xygine\mesh\MeshBuilder.hpp">
       <Filter>Header Files\mesh</Filter>
     </ClInclude>
+    <ClInclude Include="include\xygine\mesh\CubeBuilder.hpp">
+      <Filter>Header Files\mesh</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
