--- a/Example/CMakeLists.txt
+++ b/Example/CMakeLists.txt
@@ -47,6 +47,13 @@ if(X11_FOUND)
   include_directories(${X11_INCLUDE_DIRS})
 endif()
 
+if(APPLE)
+  if(XY_STATIC_RUNTIME)
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++14 -static")
+  else()
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++14 -fPIC")
+  endif()
+endif()
 
 SET(XY_DIR ${CMAKE_SOURCE_DIR}/../xygine/src)
 include(${XY_DIR}/CMakeLists.txt)
