add output vars for deferred mesh renderer add output shader for mesh deferred rendering

--- a/xygine/xygine.vcxproj.filters
+++ b/xygine/xygine.vcxproj.filters
@@ -725,5 +725,8 @@
     <ClInclude Include="include\xygine\mesh\shaders\DeferredRenderer.hpp">
       <Filter>Header Files\mesh\shaders</Filter>
     </ClInclude>
+    <ClInclude Include="include\xygine\mesh\shaders\DeferredLighting.hpp">
+      <Filter>Header Files\mesh\shaders</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
