add self illumination glow pass to mesh renderer

--- a/xygine/xygine.vcxproj.filters
+++ b/xygine/xygine.vcxproj.filters
@@ -728,5 +728,8 @@
     <ClInclude Include="include\xygine\mesh\shaders\DeferredLighting.hpp">
       <Filter>Header Files\mesh\shaders</Filter>
     </ClInclude>
+    <ClInclude Include="include\xygine\mesh\shaders\LightBlur.hpp">
+      <Filter>Header Files\mesh\shaders</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
