--- a/xygine/xygine.vcxproj
+++ b/xygine/xygine.vcxproj
@@ -255,6 +255,7 @@
     <ClInclude Include="include\xygine\mesh\shaders\DeferredLighting.hpp" />
     <ClInclude Include="include\xygine\mesh\shaders\DeferredRenderer.hpp" />
     <ClInclude Include="include\xygine\mesh\shaders\GeomVis.hpp" />
+    <ClInclude Include="include\xygine\mesh\shaders\LightBlur.hpp" />
     <ClInclude Include="include\xygine\mesh\shaders\SSAO.hpp" />
     <ClInclude Include="include\xygine\mesh\StaticConsts.hpp" />
     <ClInclude Include="include\xygine\mesh\SubMesh.hpp" />
