add mesh builder for IQM model format add sample IQM files

--- a/xygine/src/CMakeLists.txt
+++ b/xygine/src/CMakeLists.txt
@@ -38,6 +38,7 @@ set(XY_SRC
   ${XY_DIR}/components/QuadTreeComponent.cpp 
 
   ${XY_DIR}/mesh/CubeBuilder.cpp
+  ${XY_DIR}/mesh/IQMBuilder.cpp
   ${XY_DIR}/mesh/Material.cpp
   ${XY_DIR}/mesh/MaterialProperty.cpp
   ${XY_DIR}/mesh/MaterialResource.cpp
