--- a/Example/CMakeLists.txt
+++ b/Example/CMakeLists.txt
@@ -12,9 +12,9 @@ SET(xygine_example_STATIC_RUNTIME FALSE CACHE BOOL "Use statically linked standa
 
 if(CMAKE_COMPILER_IS_GNUCXX)
   if(xygine_example_STATIC_RUNTIME)
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++1y -static")
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++14 -static")
   else()
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++1y")
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c++14")
   endif()
 endif()
 
