--- a/Example/Example.vcxproj
+++ b/Example/Example.vcxproj
@@ -91,6 +91,8 @@
     <ClInclude Include="include\PhysicsDemoLine.hpp" />
     <ClInclude Include="include\PhysicsDemoState.hpp" />
     <ClInclude Include="include\DeferredDemoState.hpp" />
+    <ClInclude Include="include\PlatformDemoState.hpp" />
+    <ClInclude Include="include\PlatformPlayerController.hpp" />
     <ClInclude Include="include\RotationComponent.hpp" />
     <ClInclude Include="include\StateIds.hpp" />
     <ClInclude Include="include\TimedDestruction.hpp" />
@@ -113,6 +115,8 @@
     <ClCompile Include="src\PhysicsDemoLine.cpp" />
     <ClCompile Include="src\PhysicsDemoState.cpp" />
     <ClCompile Include="src\DeferredDemoState.cpp" />
+    <ClCompile Include="src\PlatformDemoState.cpp" />
+    <ClCompile Include="src\PlatformPlayerController.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
